# kei

./: .dockerignore  .env.example  .gitignore  2026-03-10_CODE_REVIEW_REPORT.md  2026-04-06_PR_REVIEW_fix-robustness.md  CHANGELOG.md  CHANGES.md  CONTRIBUTING.md  Cargo.toml  DEPRECATED.md  Dockerfile  LICENSE  README.md  SECURITY.md  audit.toml  clippy.toml  coverage-thresholds.json  docker-compose.yml  justfile  renovate.json  typos.toml
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/scripts/: patch_coverage.py
.github/workflows/: ci.yml  coverage-comment.yml  docker.yml  release.yml
docs/: README.md  credential-storage.md  data-integrity.md  migration-from-python.md  phase1-plan.md  roadmap.md  synctoken-reference.md  synctoken-spec.md  synctoken-sys-diag.md  v0.13-migration.md
docs/cli/: align-raw.md
docs/features/: authentication.md  content-filtering.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: auth_responses.rs  cloudkit_json.rs  enc_decoders.rs  heif_atoms.rs  heif_xmp_probe.rs  paths_sanitization.rs  photo_asset_from_record.rs  state_enums_from_str.rs  toml_config.rs  xmp_packet.rs
fuzz/seeds/heif_atoms/: regression-iloc-oom  regression-iloc-oom-2
fuzz/seeds/heif_xmp_probe/: regression-iloc-oom  regression-iloc-oom-2
fuzz/seeds/xmp_packet/: minimal.xmp
scripts/: check-coverage.sh  check-roundtrip-gate.sh
src/: cli.rs  config.rs  credential.rs  fs_util.rs  health.rs  lib.rs  main.rs  metrics.rs  migration.rs  notifications.rs  password.rs  report.rs  retry.rs  selection.rs  setup.rs  shutdown.rs  string_interner.rs  sync_loop.rs  systemd.rs  test_helpers.rs  types.rs
src/auth/: endpoints.rs  error.rs  mod.rs  responses.rs  session.rs  srp.rs  twofa.rs
src/commands/: config_cmd.rs  import.rs  list.rs  login.rs  mod.rs  password.rs  reconcile.rs  reset.rs  service.rs  status.rs  verify.rs
src/commands/import/wiremock_tests/: icloudpd_compat.rs
src/download/: error.rs  exif.rs  file.rs  filter.rs  heif.rs  limiter.rs  metadata.rs  mod.rs  paths.rs  pipeline.rs
src/icloud/: error.rs  mod.rs
src/icloud/photos/: album.rs  asset.rs  cloudkit.rs  decode.rs  enc.rs  error.rs  library.rs  metadata.rs  mod.rs  queries.rs  session.rs  smart_folders.rs  types.rs
src/state/: db.rs  error.rs  mod.rs  schema.rs  types.rs
tests/: README.md  TESTS.md  auth.rs  behavioral.rs  cli.rs  import_existing_live.rs  lib.sh  run-all-tests.sh  run-deep-validation.sh  run-docker-live.sh  run-gap-tests.sh  setup_auth.rs  state.rs  state_auth.rs  sync.rs
tests/common/: mod.rs
tests/shell/: concurrency.sh  docker.sh  lib.sh  state-machine.sh
