[package]
name = "icloudpd-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "icloudpd-rs"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
reqwest = { version = "0.13", features = ["cookies", "json", "stream", "http2"] }
futures-util = "0.3"
tokio-stream = "0.1"
tokio-util = "0.7"
cookie = "0.18"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto (SRP auth)
sha2 = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
hmac = "0.12"
num-bigint = "0.4"
base64 = "0.22"
uuid = { version = "1", features = ["v1", "v4"] }

# Dates
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Progress / UI
indicatif = "0.18"
rpassword = "7"

# EXIF
kamadak-exif = "0.6"
little_exif = "0.6"

# Error handling
anyhow = "1"
thiserror = "2"

# Random
rand = "0.9"

# File locking
fs4 = "0.13"

time = "0.3"

# Misc
url = "2"
dirs = "6"
async-trait = "0.1"
urlencoding = "2"

# SQLite state tracking
rusqlite = { version = "0.38", features = ["bundled"] }

# Memory optimization
smallvec = "1.15"
rustc-hash = "2.1"
data-encoding = "2.10.0"

[target.'cfg(target_os = "linux")'.dependencies]
sd-notify = "0.4"
