[package]
name = "kei"
version = "0.11.1-dev"
edition = "2021"
# src/download/paths.rs calls str::floor_char_boundary, stabilized in 1.91.
# Cargo refuses to build on older toolchains with a clean error naming this
# version; the clippy::incompatible_msrv lint below catches regressions on PR.
rust-version = "1.91"

[[bin]]
name = "kei"
path = "src/main.rs"

[features]
# XMP metadata embedding + sidecar writing. Default-on; build with
# `--no-default-features` on platforms where Adobe's vendored C++ XMP
# Toolkit does not compile (notably FreeBSD — see #256). Disabling drops
# the `--embed-xmp`, `--xmp-sidecar`, and `--set-exif-*` CLI flags and the
# code paths behind them; HEIC container edits go with it because the
# XMP packet serializer lives in xmp_toolkit.
default = ["xmp"]
xmp = ["dep:xmp_toolkit"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }

# HTTP
reqwest = { version = "0.13", features = ["cookies", "json", "stream", "http2"] }
bytes = "1"
futures-util = "0.3"
tokio-stream = "0.1"
tokio-util = "0.7"
cookie = "0.18"

# Bandwidth throttling (token-bucket for global download rate cap)
async-speed-limit = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

# Crypto (SRP auth)
sha2 = "0.10"
pbkdf2 = "0.12"
num-bigint = "0.4"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }

# Credential security
secrecy = "0.10"
aes-gcm = "0.10"

# Dates
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Metrics / observability
prometheus-client = "0.22"
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }

# Progress / UI
indicatif = "0.18"
rpassword = "7"
dialoguer = "0.12"

# XMP metadata via Adobe's XMP Toolkit (vendored C++ source).
# Handles JPEG, PNG, TIFF, MP4, MOV, PSD, PDF, and more via XMPFiles.
# Does NOT handle HEIC — the bundled XMPFiles has no HEIF handler, so HEIC
# embedded XMP is handled separately via libheif-rs.
# Optional (behind the `xmp` feature, default-on) so platforms without a
# working C++ toolchain for the vendored sources can opt out. See #256.
xmp_toolkit = { version = "1", optional = true }

# ISO-BMFF (MP4 / HEIF / HEIC) atom parsing + encoding. HEIC's XMP packet
# lives in a `mime`-type item inside the `meta` box; mp4-atom gives us the
# box primitives to surgically insert it without decoding image data.
mp4-atom = "0.10"

# Error handling
anyhow = "1"
thiserror = "2"

# Random
rand = "0.10.1"

# File locking
fs4 = "0.13"

# Glob pattern matching
glob = "0.3"

# Misc
url = "2"
dirs = "6"
async-trait = "0.1"
urlencoding = "2"

# SQLite state tracking
rusqlite = { version = "0.39", features = ["bundled"] }

# Binary plist decoding for iCloud *Enc fields (location, keywords, etc.)
plist = "1"

# System
libc = "0.2"

# Memory optimization
smallvec = "1.15"
rustc-hash = "2.1"
data-encoding = "2.10.0"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service"] }
sd-notify = "0.5"

# FreeBSD: Secret Service D-Bus API is available via ports (dbus + a
# keyring daemon like gnome-keyring or KWallet). If no daemon is running,
# `CredentialStore` falls back to the encrypted file backend. See #256.
[target.'cfg(target_os = "freebsd")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
dotenvy = "0.15"
rusqlite = { version = "0.39", features = ["bundled"] }
http = "1"
wiremock = "0.6"
tracing-test = "0.2"
sha1 = "0.10"
# test-util enables `tokio::test(start_paused = true)` so retry/backoff
# tests in the auth layer don't sleep through real wall-clock delays.
tokio = { version = "1", features = ["test-util"] }

[[test]]
name = "cli"
path = "tests/cli.rs"

[[test]]
name = "sync"
path = "tests/sync.rs"

[[test]]
name = "state_auth"
path = "tests/state_auth.rs"

[lints.clippy]
# Baseline lint group. Lower priority so individual lints below can override.
all = { level = "warn", priority = -1 }

# Locking footguns: holding a std::sync lock across .await deadlocks.
# Same failure class as #249's blocking_lock panic.
await_holding_lock = "warn"

# Panic footguns. Tests scope these off inside `#[cfg(test)] mod tests`.
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"

# Logging hygiene. `tracing` is the only approved logger. Allowed with reasons
# in the stdout-producing CLI subcommands and a few pre-tracing paths.
print_stdout = "warn"
print_stderr = "warn"
dbg_macro = "warn"

# Numeric-cast correctness. Every remaining site has a reviewed `#[allow]` + reason.
cast_possible_truncation = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"

# `[]` / `[..]` panic footguns. Refactor to `.get()` / `.first()` / pattern
# match, or scope an `#[allow]` with a comment naming the invariant.
indexing_slicing = "warn"

# Flags std API calls stabilized after the declared `rust-version`. Would
# have caught #259's floor_char_boundary use at PR time, not at user build.
incompatible_msrv = "warn"
